Readability fix

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,6 @@ h2,
 h3 {
   margin-bottom: 1em;
   color: var(--HIGHLIGHT-COLOR);
-  -webkit-text-stroke: 0.001em black;
 }
 
 p {
@@ -338,7 +337,6 @@ tr {
 .menu__fd,
 .menu__header {
   color: var(--HIGHLIGHT-COLOR);
-  -webkit-text-stroke: 0.001em black;
   font-weight: bold;
   height: 100%;
   display: grid;
